# CIS700

./: CIS700.cabal
.stack-work/install/x86_64-osx/lts-3.18/7.10.2/flag-cache/: CIS700-0.1.0.0-17f007f8cbaf6dc5857527f244553c22  CIS700-0.1.0.0-4d9861ec7b3785dbece7bec833d9fa29  CIS700-0.1.0.0-65cfae334546a57764bde66aa84f7b13  CIS700-0.1.0.0-6b93467b983076928db56611d9eea7e7  CIS700-0.1.0.0-6f2dd4af05900ff6a0f23cc6a4637f17  CIS700-0.1.0.0-76f753ec5ceb07083e2037a83e630109  CIS700-0.1.0.0-774d2f6a664688756b2723e959544077  CIS700-0.1.0.0-959654372fa6432ce064c0cfb45079ce  CIS700-0.1.0.0-9eee69b3c5c8bb644704f67b16cfde75  CIS700-0.1.0.0-adad2e342fe74dd8a4f04d40aa20e554  CIS700-0.1.0.0-e06041e546c3c032441a32a03fe0023d  Glob-0.7.5-3926ffa61caaa9512bae0d6700bf5452  MonadPrompt-1.0.0.5-5cf274b67a29c48095a3fc600baa1fbe  MonadRandom-0.4.1-0734c132bf51dbe64b094b6b90e75448  QuickCheck-2.8.1-de754978dce0747efe597fc55508354a  StateVar-1.1.0.1-d26cc6243f7eb7d8194c4fd0dccc0689  abstract-deque-0.3-be8452719e61addfafe5adf605f1ea71  abstract-par-0.3.3-07fa9ea7b779acf8576057c3250082e3  (+56 more)
benchmark/Results/: incrVsIncr.html  morrisB_mean_vs_nomean.html  morrisCore.html  morrisCore2.html  morrisNoCore.html  morris_median_vs_nomedian.html  morris_vs_morris copy.html  morris_vs_morris.html  tofm_vs_moft.html
depricated/: ApproxMedianDep.hs  CodensityTutorial.hs  CoreDep.hs  CountMinSketch2.hs  CountMinSketch3.hs  CountMinSketch4.hs  CountMinSketchDep.hs  CountMinSketchDesign.txt  Examples.hs  MorrisDep.hs  Play1129.hs  Play1211.hs  Tbd.hs  morris.m  temp.hs
report/: submit.aux  submit.fdb_latexmk  submit.fls  submit.tex
report/sec/: impl.tex  intro.tex  overview.tex  proof.tex
src/: ApproxMedian.hs  Core.hs  CountMinSketch.hs  FeqMoments.hs  Morris.hs  Statistics.hs  Utils.hs  links.txt
test/: BapproxMedian.hs  Bmorris.hs  TapproxMedian.hs  Tcore.hs  TcountMinSketch.hs  Tmorris.hs
(+50 files in other folders)
