name:                CIS700
version:             0.1.0.0
synopsis:            CIS700 final projects
description:         Please see README.md
homepage:            http://github.com/lingxiao/CIS700#readme
license:             BSD3
license-file:        LICENSE
author:              Xiao Ling
maintainer:          lingxiao@seas.upenn.edu
copyright:           2015 Xiao Ling
category:            Math
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs  :    src
  exposed-modules :    Lib,Core
  build-depends   :    base >= 4.7 && < 5
                     , mtl
                     , random
                     , random-fu
                     , MonadRandom
                     , QuickCheck
                     , random-source
                     , conduit
                     , containers
                     , split
                     , hashable
                     , matrix
                     , criterion == 1.1.0.0
  default-language:    Haskell2010

executable CIS700-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , CIS700
  default-language:    Haskell2010

test-suite CIS700-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
                     , src
  main-is:             Spec.hs
  build-depends:       base
                     , CIS700
                     , test-framework
                     , test-framework-quickcheck2
                     , QuickCheck
                     , criterion == 1.1.0.0
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/CIS700
